# recipe-generator

./: .env.docker  .gitignore  README.md  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: test.yaml
backend/: Pipfile  pyproject.toml  test.http
backend/app/: factory.py
backend/app/api/: __init__.py  recipes.py  utils.py
backend/app/core/: config.py
backend/app/models/: __init__.py  recipe.py  user.py
backend/app/schemas/: recipe.py
backend/tests/: conftest.py
backend/tests/api/: test_items.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: api.ts  index.tsx  types.ts
frontend/src/components/: App.tsx  Control.tsx  Main.tsx  RecipeList.tsx  RecipeModal.tsx
frontend/src/components/Avatar/: Loader.tsx
