[tool.poetry]
name = "recipe_generator-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.1"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
SQLAlchemy = "^2.0.20"
gunicorn = "^21.2.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
openai = "^0.28.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
ipython = "^8.18.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
